--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 SECRET_KEY = django-insecure-vgv$jns=7%r2t8(^t5=+tm%hr9dh9h9omqf12futc64s!16^+g
 DEBUG = True
+
+DATABASE_NAME = railway
+DATABASE_HOST = containers-us-west-111.railway.app
+DATABASE_USER = postgres
+DATABASE_PASSWORD = tilqbvuzCPt9E64UaAC7
+DATABASE_PORT = 6169
